fix: Minor Java 21 Code Warnings